fix: Menu gap between header and menu body on overlay

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -104,7 +104,7 @@ header {
 
 .nav-overlay {
   position: fixed;
-  top: 75px;
+  top: 60px;
   left: 0;
   z-index: 1;
   background: rgba(0, 0, 0, 0.8);
@@ -112,7 +112,7 @@ header {
 
   &.open {
     width: calc(100vw);
-    height: calc(100vh - 200px);
+    height: calc(100vh);
     overflow: hidden;
   }
 
